GNOME Bugzilla – Bug 667311
fix various unlikely, but still potential memoryleaks
Last modified: 2012-01-05 13:31:35 UTC
Created attachment 204629 [details] [review] patch .
Pushed, but without the gst_pb_utils_get_decoder_description() chunk. g_return_val_if_fail() is a courtesy to catch programming errors. The caller can be lucky we don't just crash in this case, and we will not take extra care to avoid leaks.
Comment on attachment 204629 [details] [review] patch commit 95be60de15801c8fec702672f9c1437298138e2f Author: Havard Graff <havard.graff@tandberg.com> Date: Tue Nov 1 17:57:59 2011 +0100 Fix various unlikely, but still potential memoryleaks in error code paths https://bugzilla.gnome.org/show_bug.cgi?id=667311