Fix various unlikely, but still potential memoryleaks in error code paths

https://bugzilla.gnome.org/show_bug.cgi?id=667311